--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,11 +1,54 @@
-<p>feedback works!</p>
-{{feedback}}
-<div class="bannerHeading">Feedback</div>
-<div class="banner">
-    <div class="bannerText" *ngFor='let fb of feedback'>
-        <p>{{fb}}</p>
-  
+<br>
+<mat-card>
+    <form (submit)="onSubmit(feedbackForm)"
+            #feedbackForm="ngForm" novalidate>
+            <h1>Give your Feedback</h1>
+            <div>
+                <mat-form-field>
+                    <mat-label>Rating</mat-label>
+                    <p>Submit rating 1 - 5</p>
+                    <input
+                        matInput
+                        rows="4"
+                        name = "rating"
+                        ngModel 
+                        required
+                        placeholder="Rating"
+                        #rating="ngModel">
+                    
+            </mat-form-field>
+        </div>
 
+    <div>
+        <mat-form-field>
+            <input
+                matInput
+                rows="4"
+                name = "comment"
+                ngModel 
+                required
+                placeholder="Comment"
+                #comment="ngModel">
+                <mat-error *ngIf="comment.invalid">Please enter a comment for this artist's skill.</mat-error>
+        </mat-form-field>
     </div>
-</div>
+     <button
+    mat-raised-button
+    color="accent"
+    type="submit">Create Skill Profile</button>
+    </form>
+</mat-card>
+<br>
+   
+ <!-- FEEDBACK -->
+<mat-card *ngFor='let arr of array' >
+    <div class="profile-info">
+    <div>
+           {{arr.age}}
+    </div>
+    <div>
+            
+    </div>
+    </div>
+</mat-card>
 
