--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,7 +11,8 @@
                 <li>
                 <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
               </li>
-
+              <button mat-button 
+              [routerLink]="['/skill/getall']" class='authButton'>My Profile</button>
             </ul>
     
         </nav>
