--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -35,20 +35,17 @@
      <button
     mat-raised-button
     color="accent"
-    type="submit">Create Skill Profile</button>
+    type="submit">ADD FEEDBACK</button>
     </form>
 </mat-card>
+<button (click)="onGetFeedback($event)">Show Skill Comments</button>
 <br>
    
- <!-- FEEDBACK -->
-<mat-card *ngFor='let arr of array' >
-    <div class="profile-info">
-    <div>
-           {{arr.age}}
-    </div>
-    <div>
-            
-    </div>
-    </div>
+<mat-card *ngFor='let fb of feedbacks'>
+    <mat-card-content>
+        <p>Rating: {{fb.rating}}</p>
+        <p>Comment: {{fb.comment}}</p>
+    </mat-card-content>
 </mat-card>
+
 
